# particle-life

./: .gitignore  Cargo.toml  README.md  components.json  package.json  postcss.config.cjs  tailwind.config.cjs  util.sh
client/: .eslintrc.json  index.html  life.html  prettier.config.cjs  tsconfig.json  webpack.config.cjs
client/old/: life.js  wasmlife.js  worker.js
client/src/: App.tsx  Simulation.tsx  style.css
client/src/primitives/: button.tsx  separator.tsx  slider.tsx  switch.tsx
cool-sims/: example.json  sourdough.json
macroquad/: Cargo.toml
macroquad/src/: app.rs  main.rs  sim.rs  util.rs
server/: index.js  tsconfig.json
server/src/: main.ts
src/: app.rs  gpu.rs  lib.rs  main.rs  sim.rs  util.rs
src/mq/: app.rs  force.wgsl  mod.rs  sim.rs
src/wg/: app.rs  compute.wgsl  mod.rs  render.wgsl
wasm/: Cargo.toml
wasm/src/: lib.rs  qt.rs  sim.rs  utils.rs
wgpu/: Cargo.toml  sync_wgsl_types.py
wgpu/src/: app.rs  compute_force.wgsl  main.rs  render.wgsl  util.rs
wgpu/src/shaders/: compute.wgsl  render.wgsl  types.wgsl
