[package]
name = "particle-life"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
egui-macroquad = { version = "0.17.3", default-features = false }
env_logger = "0.11.8"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
glam = "0.30.4"
macroquad = "0.4.14"
pollster = "0.4.0"
# quadtree = "0.5.0"
quadtree = { path = "../quadtree" }
rand = "0.9.1"
rand_distr = "0.5.1"
random_color = "1.1.0"
serde_json = "1.0.145"
wgpu = "27.0.1"
winit = "0.30.12"

[profile.dev.package.'*']
opt-level = 3
