[package]
name = "particle-life"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
pollster = "0.4.0"
rand = "0.9.1"
rand_distr = "0.5.1"
random_color = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wgpu = "27.0.1"
winit = "0.30.12"
